--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -1,6 +1,6 @@
 name: Stage the app
 
-# Controls when the workflow will run
+# Controls when the workflow will run in the process
 on:
   pull_request:
     types: [labeled]
